--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -46,7 +46,7 @@ body{
 		height: 20px;
 		margin: 0;
 		width: calc(100% - 80px);
-		border: 0;
+		border: none;
 		padding: 10px;
 		font-size: 20px;
 		//{ ** INCLUDES
@@ -323,6 +323,17 @@ body{
 			width: 100%;
 			text-align: center;
 		}
+		>.link{
+			clear: both;
+			left: 50%;
+			transform: translateX(-50%);
+			margin-left: initial;
+
+			//{ ** INCLUDES
+				@include notSelectable();
+			//} ** END INCLUDES
+			
+		}
 	}
 
 	@media (min-width: 450px){
@@ -358,8 +369,8 @@ body{
 		float: left;
 		clear: none;
 		padding: 10px;
-		border: solid 2px white;
-		border-radius: 5px;
+		border-bottom: solid 2px white;
+		// border-radius: 5px;
 		margin-left: 10px;
 		margin-bottom: 10px;
 		color: white;
