--- a/assets/css/spring2017/hackbot.css
+++ b/assets/css/spring2017/hackbot.css
@@ -2,9 +2,11 @@
 * {
   font-family: "Lato", sans-serif; }
 
+html {
+  min-height: 100%; }
+
 body {
-  margin: 0;
-  min-height: 100vh; }
+  margin: 0; }
 
 .welcome {
   position: relative;
