--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -1,11 +1,13 @@
 @import 'variables';
 
-
+html{
+	min-height: 100%;
+}
 
 body{
 	// background-color: black;
 	margin: 0;
-	min-height: 100vh;
+	// min-height: 100vh;
 	// min-width: 660px;
 }
 
