--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -22,11 +22,22 @@ body{
 	text-align: center;
 	font-size: 4em;
 	&.isMobile{
-		width: 100%;
-		margin-top: 110px;
+		width: calc(100% - 20px);
+		margin-top: 100px;
 		font-size: 3em;
+		padding: 0px 10px;
+		display: none;
 	}
 }
+
+
+/////////////////////////////////////////// input styling ///////////////////////////////////////////
+
+::-webkit-input-placeholder { font-weight: 300; }
+::-moz-placeholder { font-weight: 300; } /* firefox 19+ */
+:-ms-input-placeholder { font-weight: 300; } /* ie */
+input:-moz-placeholder { font-weight: 300; }
+
 
 .search_box{
 	position: absolute;
@@ -37,11 +48,28 @@ body{
 	// transform: translateX(-50%);
 	background-color: white;
 	min-width: 200px;
+	opacity: 0;
 	&.isMobile{
-		width: calc(100% - 60px);
+		top: 20px;
+		width: calc(100% - 40px);
 		left: 50%;
 		transform: translateX(-50%);
+		height: 60px;
+		border-radius: 2px;
 	}
+
+	@keyframes showSearch{
+		from{
+			opacity: 0;
+		}
+		to{
+			opacity: 1;
+		}
+	}
+
+	animation: showSearch .2s ease-out .3s forwards;
+
+
 	>#search_text{
 		position: relative;
 		float: left;
@@ -51,9 +79,18 @@ body{
 		border: none;
 		padding: 10px;
 		font-size: 20px;
+		-webkit-box-shadow: 0 0 0px 1000px white inset;
+		overflow: hidden;
 		//{ ** INCLUDES
 			@include noDecoration();
 		//} ** END INCLUDES
+		&.isMobile{
+			height: 40px;
+			font-size: 20px;
+			line-height: 40px;
+			vertical-align: middle;
+			border-radius: 2px;
+		}
 	}
 	>#hackbot_submit{
 
@@ -67,13 +104,17 @@ body{
 		margin: 10px;
 		padding: 0;
 		width: 40px;
-		background-image: url("../../img/spring2017/arrow.png");
+		background-image: url("../../img/spring2017/magnify.png");
 		background-size: contain;
 		background-color: white;
 		background-repeat: no-repeat;
 		background-position: center;
 		border: none;
 		cursor: pointer;
+		&.isMobile{
+			height: 30px;
+			margin: 15px 10px;
+		}
 	}
 }
 
@@ -253,30 +294,44 @@ body{
 		color: white;
 		float: right;
 		clear: right;
-	}
-	>.faq{
-		color: white;
-		// opacity: 0;
-		// margin-top: 70px;
-		float: right;
-		clear: right;
-		width: 100%;
-		// border: solid white 1px;
-		// border-radius: 5px;
-		padding: 10px 20px;
-		// animation: showResult 0.5s ease-out .9s forwards;
-
-		>.title{
-			font-weight: 300;
-			font-size: 1em;
-			margin-bottom: 0px;
-			// color: #82ddf0;
-			cursor: pointer;
+		&.isMobile{
+			float: left;
+			left: 50%;
+			transform: translateX(-50%);
 		}
-		>.content{
+	}
+
+	>.more_form{
+		>input[type="submit"]{
 			display: none;
 		}
+		>label{
+			>.faq{
+				color: white;
+				// opacity: 0;
+				// margin-top: 70px;
+				float: right;
+				clear: right;
+				width: 100%;
+				// border: solid white 1px;
+				// border-radius: 5px;
+				padding: 10px 20px;
+				// animation: showResult 0.5s ease-out .9s forwards;
+
+				>.title{
+					font-weight: 300;
+					font-size: 1em;
+					margin-bottom: 0px;
+					// color: #82ddf0;
+					cursor: pointer;
+				}
+				>.content{
+					display: none;
+				}
+			}
+		}
 	}
+	
 
 	&.isMobile{
 		width: 90%;
@@ -289,6 +344,8 @@ body{
 		min-width: initial;
 		max-width: initial;
 
+		
+
 		>.label{
 			margin-right: initial;
 			margin-bottom: 30px;
@@ -297,11 +354,22 @@ body{
 			width: 100%;
 			text-align: center;
 		}
+		>.more_form{
+			>label{
+				>.faq{
+					padding: 10px 0px;
+					text-align: center;
+				}
+			}
+			>*{
 
-		>.faq{
-			padding: 10px 0px;
-			text-align: center;
+				//{ ** INCLUDES
+					@include noDecoration();
+				//} ** END INCLUDES
+				
+			}
 		}
+		
 
 	}
 }
@@ -318,7 +386,7 @@ body{
 	margin-bottom: 20px;
 	
 	&.isMobile{
-		margin-top: 40px;
+		margin-top: 120px;
 		width: 100%;
 
 		>.label{
@@ -338,16 +406,13 @@ body{
 		}
 	}
 
-	@media (min-width: 450px){
-		@media (min-height: 685px){
-			&:not(.isMobile){
-				position: absolute;
-				bottom: 0;
-				float: initial;
-				clear: initial;
-			}
-		}
+	&.bottom:not(.isMobile){
+		position: absolute;
+		bottom: 0;
+		float: initial;
+		clear: initial;
 	}
+	
 
 	@keyframes quickLinks{
 		from{
