--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -110,6 +110,34 @@ label{
 		position: relative;
 		float: left;
 	}
+
+	>.search_decoy{
+		position: fixed;
+		top: 30px;
+		left: 100px;
+		width: calc(100% - 540px);
+		height: 40px;
+		// left: 50%;
+		// transform: translateX(-50%);
+		background-color: white;
+		min-width: 200px;
+		&.isMobile{
+			width: calc(100% - 60px);
+			left: 50%;
+			transform: translateX(-50%);
+		}
+		>.arrow_decoy{
+			position: relative;
+			float: right;
+			width: 40px;
+			height: 20px;
+			margin: 10px;
+			background-image: url("../../img/spring2017/arrow.png");
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
+	}
 	
 	>.nav-links.isMobile{
 
@@ -637,6 +665,10 @@ label{
 		@include quickTransition(all);
 	//} ** END INCLUDES
 	
+	&:not(.isMobile){
+		left: 110px;
+	}
+
 	&.isMobile{
 		//{ ** ATTRIBUTES
 			top: initial;
@@ -836,6 +868,11 @@ label{
 				@include quickTransition(top);
 			//} ** END INCLUDES
 			
+			&.isMobile{
+				top: 40%;
+			}
+
+
 			>*{
 				float: left;
 				clear: left;
@@ -1077,14 +1114,27 @@ label{
 			margin: 0 5%;
 			padding-right: 1%;
 			float: left;
-			color: white;
 			margin-bottom: 40px;
 			font-weight: 300;
 			overflow: hidden;
+
+			//{ ** INCLUDES
+				@include notSelectable();
+				@include noDecoration();
+			//} ** END INCLUDES
 			cursor: pointer;
+			color: white;
 		
 			&.isMobile{
 				width: 86%;
+				>*:not(.content){
+
+					//{ ** INCLUDES
+						@include notSelectable();
+						@include noDecoration();
+						cursor: pointer;
+					//} ** END INCLUDES
+				}
 			}
 
 			&.left:not(.isMobile){
@@ -1151,6 +1201,8 @@ label{
 					//{ ** INCLUDES
 						@include notSelectable();
 					//} ** END INCLUDES
+
+					cursor: pointer;
 					
 				}
 
