--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -49,6 +49,7 @@ input:-moz-placeholder { font-weight: 300; }
 	background-color: white;
 	min-width: 200px;
 	opacity: 0;
+	overflow: hidden;
 	&.isMobile{
 		top: 20px;
 		width: calc(100% - 40px);
@@ -67,7 +68,7 @@ input:-moz-placeholder { font-weight: 300; }
 		}
 	}
 
-	animation: showSearch .2s ease-out .3s forwards;
+	animation: showSearch .3s ease-out .8s forwards;
 
 
 	>#search_text{
@@ -312,7 +313,7 @@ input:-moz-placeholder { font-weight: 300; }
 				// margin-top: 70px;
 				float: right;
 				clear: right;
-				width: 100%;
+				width: calc(100% - 40px);
 				// border: solid white 1px;
 				// border-radius: 5px;
 				padding: 10px 20px;
@@ -357,6 +358,7 @@ input:-moz-placeholder { font-weight: 300; }
 		>.more_form{
 			>label{
 				>.faq{
+					width: 100%;
 					padding: 10px 0px;
 					text-align: center;
 				}
@@ -401,8 +403,10 @@ input:-moz-placeholder { font-weight: 300; }
 
 			//{ ** INCLUDES
 				@include notSelectable();
+				@include noDecoration();
 			//} ** END INCLUDES
-			
+			cursor: pointer;
+			color: white;
 		}
 	}
 
