--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -3,10 +3,15 @@
   font-family: "Lato", sans-serif; }
 
 html {
-  opacity: 0; }
+  opacity: 0;
+  animation: htmlLoad .2s ease-out 1.1s forwards; }
   html.isMobile {
     height: 100%; }
-
+@keyframes htmlLoad {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 .full_form {
   float: right; }
 
@@ -38,7 +43,7 @@ label {
   z-index: 0;
   visibility: hidden;
   opacity: 0;
-  overflow-y: auto;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch; }
   #hackbot_search > iframe {
     height: 100%;
@@ -977,7 +982,7 @@ label {
         float: left;
         height: 100px;
         margin-left: 3%;
-        font-size: 20px;
+        font-size: 18px;
         cursor: pointer; }
         .page > .faq > label > .item > .title > div {
           position: absolute;
@@ -1003,6 +1008,7 @@ label {
         padding: 20px 20px;
         border-top: solid 1px #161616;
         text-align: center;
+        font-size: 14px;
         -webkit-user-select: none;
         /* Chrome/Safari */
         -moz-user-select: none;
