--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -5,6 +5,16 @@ html{
 	&.isMobile{
 		height: 100%;
 	}
+
+	@keyframes htmlLoad{
+		from{
+			opacity: 0;
+		}
+		to{
+			opacity: 1;
+		}
+	}
+	animation: htmlLoad .2s ease-out 1.1s forwards;
 }
 
 .full_form{
@@ -66,7 +76,7 @@ label{
 	visibility: hidden;
 	opacity: 0;
 	
-	overflow-y: auto;
+	overflow-y: hidden;
 	-webkit-overflow-scrolling:touch;
 	// background-color: black;
 
@@ -1183,7 +1193,7 @@ label{
 				float: left;
 				height: 100px;
 				margin-left: 3%;
-				font-size: 20px;
+				font-size: 18px;
 				cursor: pointer;
 				>div{
 					position: absolute;
@@ -1214,6 +1224,7 @@ label{
 				padding: 20px 20px;
 				border-top: solid 1px $color-black;
 				text-align: center;
+				font-size: 14px;
 				// margin-top: 15px;
 
 				//{ ** INCLUDES
